force-app/main/default/objects/Account/fields/Account_SUb_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_SUb_Status__c</fullName>
    <label>Account SUb Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending at User1</fullName>
            </value>
            <value>
                <fullName>Pending at User2</fullName>
            </value>
            <value>
                <fullName>Pending at User3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>