force-app/main/default/objects/Account/fields/Approved_By_User1__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_User1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved By User1</label>
    <type>Checkbox</type>
</CustomField>