force-app/main/default/objects/Account/fields/Close_all_opps__c.field-meta.xml
<CustomField>
    <fullName>Close_all_opps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close all opps</label>
    <type>Checkbox</type>
</CustomField>