force-app/main/default/objects/Account/fields/CurrentStage__c.field-meta.xml
<CustomField>
    <fullName>CurrentStage__c</fullName>
    <label>CurrentStage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screen 1</fullName>
                <default>true</default>
                <label>Screen 1</label>
            </value>
            <value>
                <fullName>Screen 2</fullName>
            </value>
            <value>
                <fullName>Screen 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>