force-app/main/default/objects/Account/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution Channel</label>
    <referenceTo>Distribution_Channel__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>