force-app/main/default/objects/Account/fields/Max_Opp_Name__c.field-meta.xml
<CustomField>
    <fullName>Max_Opp_Name__c</fullName>
    <label>Max Opp Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>