force-app/main/default/objects/Account/fields/Number_of_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contacts__c</fullName>
    <label>Number of Contacts</label>
    <length>10</length>
    <type>Text</type>
</CustomField>