force-app/main/default/objects/Account/fields/Recall_By_Admin__c.field-meta.xml
<CustomField>
    <fullName>Recall_By_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recall By Admin</label>
    <type>Checkbox</type>
</CustomField>