force-app/main/default/objects/Account/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <externalId>true</externalId>
    <label>SAP Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>