force-app/main/default/objects/Account/fields/Sent_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Sent_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent for Approval</label>
    <type>Checkbox</type>
</CustomField>