force-app/main/default/objects/Account/fields/View_Details__c.field-meta.xml
<CustomField>
    <fullName>View_Details__c</fullName>
    <formula>HYPERLINK(&quot;/apex/AccountDetails?id=&quot;+ Id, &quot;View More&quot;,&apos;_target&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Details</label>
    <type>Text</type>
</CustomField>