force-app/main/default/objects/Account/recordTypes/Farmer.recordType-meta.xml
<RecordType>
    <fullName>Farmer</fullName>
    <active>true</active>
    <label>Farmer</label>
</RecordType>