force-app/main/default/objects/Account/validationRules/dsdsad.validationRule-meta.xml
<ValidationRule>
    <fullName>dsdsad</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Account_SUb_Status__c , &apos;Pending at User3&apos;)</errorConditionFormula>
    <errorMessage>You Cannot delete record</errorMessage>
</ValidationRule>